@@ -3,12 +3,14 @@ package com.thbs.lms.testDTO;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNull;
 
+import java.util.Arrays;
 import java.util.List;
 
 import org.junit.jupiter.api.Test;
 import org.springframework.boot.test.context.SpringBootTest;
 
 import com.thbs.lms.dto.LearningPlanDTO;
+import com.thbs.lms.dto.PathDTO;
 
 @SpringBootTest
 class LearningPlanDTOTest {
@@ -18,7 +20,7 @@ class LearningPlanDTOTest {
         // Sample data
         Long batchId = 123L;
         Long learningPlanId = 456L;
-        List<Long> learningPlanPathIds = List.of(1L, 2L, 3L);
+        List<PathDTO> path = Arrays.asList(new PathDTO(1L, "type1"), new PathDTO(2L, "type2"));
         List<Long> courseIds = List.of(101L, 102L, 103L);
         List<List<Long>> topicIds = List.of(
                 List.of(201L, 202L),
@@ -31,14 +33,14 @@ class LearningPlanDTOTest {
         // Test setters
         learningPlanDTO.setBatchId(batchId);
         learningPlanDTO.setLearningPlanId(learningPlanId);
-        learningPlanDTO.setLearningPlanPathIds(learningPlanPathIds);
+        learningPlanDTO.setPath(path);
         learningPlanDTO.setCourseIds(courseIds);
         learningPlanDTO.setTopicIds(topicIds);
 
         // Test getters
         assertEquals(batchId, learningPlanDTO.getBatchId());
         assertEquals(learningPlanId, learningPlanDTO.getLearningPlanId());
-        assertEquals(learningPlanPathIds, learningPlanDTO.getLearningPlanPathIds());
+        assertEquals(path, learningPlanDTO.getPath());
         assertEquals(courseIds, learningPlanDTO.getCourseIds());
         assertEquals(topicIds, learningPlanDTO.getTopicIds());
     }
@@ -48,7 +50,7 @@ class LearningPlanDTOTest {
         // Sample data for constructor
         Long batchId = 123L;
         Long learningPlanId = 456L;
-        List<Long> learningPlanPathIds = List.of(1L, 2L, 3L);
+        List<PathDTO> path = Arrays.asList(new PathDTO(1L, "type1"), new PathDTO(2L, "type2"));
         List<Long> courseIds = List.of(101L, 102L, 103L);
         List<List<Long>> topicIds = List.of(
                 List.of(201L, 202L),
@@ -56,13 +58,12 @@ class LearningPlanDTOTest {
                 List.of(205L, 206L));
 
         // Create a LearningPlanDTO object using AllArgsConstructor
-        LearningPlanDTO learningPlanDTO = new LearningPlanDTO(batchId, learningPlanId, learningPlanPathIds, courseIds,
-                topicIds);
+        LearningPlanDTO learningPlanDTO = new LearningPlanDTO(batchId, learningPlanId, path, courseIds, topicIds);
 
         // Test getters to verify the data set by AllArgsConstructor
         assertEquals(batchId, learningPlanDTO.getBatchId());
         assertEquals(learningPlanId, learningPlanDTO.getLearningPlanId());
-        assertEquals(learningPlanPathIds, learningPlanDTO.getLearningPlanPathIds());
+        assertEquals(path, learningPlanDTO.getPath());
         assertEquals(courseIds, learningPlanDTO.getCourseIds());
         assertEquals(topicIds, learningPlanDTO.getTopicIds());
     }
@@ -75,9 +76,8 @@ class LearningPlanDTOTest {
         // Test getters to verify the default values set by NoArgsConstructor
         assertNull(learningPlanDTO.getBatchId());
         assertNull(learningPlanDTO.getLearningPlanId());
-        assertNull(learningPlanDTO.getLearningPlanPathIds());
+        assertNull(learningPlanDTO.getPath());
         assertNull(learningPlanDTO.getCourseIds());
         assertNull(learningPlanDTO.getTopicIds());
     }
-
 }
